fix: weakness modal button spacing

--- a/src/pages/deck-edit/editor/draft-basic-weakness.module.css
+++ b/src/pages/deck-edit/editor/draft-basic-weakness.module.css
@@ -84,3 +84,7 @@
 .error svg {
   color: var(--nord-11);
 }
+
+.actions > * + * {
+  margin-left: 0.375rem;
+}
